<resources>
    <string name="app_name">Essential 531</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="past_training_cycle">Past Training Cycles</string>
    <string name="current_training_cycle">Current Training Cycle</string>
    <string name="title_past_training_cycles">Past Workouts</string>
    <string name="menu_item_delete_list_data">Delete list data</string>
    <string name="menu_item_re_create_database">Re-create database</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter</string>
    <string name="ok">Ok</string>
    <string name="margin_large">80dp</string>
    <string name="set_one">Set 1</string>
    <string name="set_two">Set 2</string>
    <string name="set_three">Set 3</string>
    <string name="set_four">Set 4</string>
    <string name="set_five">Set 5</string>
    <string name="warm_up_reps">5</string>
    <string name="save_workout">Workout Complete</string>
</resources>
