<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_warm_up_sets"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            card_view:cardCornerRadius="8dp">


            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:stretchColumns="*">

                <TextView
                    android:id="@+id/text_view_warm_up_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Warm-up Sets" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray"/>

                <TableRow>
                    <TextView
                        android:id="@+id/warm_up_set_one_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_one" />

                    <TextView
                        android:id="@+id/warm_up_set_one_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/warm_up_set_one_reps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warm_up_reps"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/warm_up_set_two_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_two" />

                    <TextView
                        android:id="@+id/warm_up_set_two_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/warm_up_set_two_reps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warm_up_reps"/>

                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/warm_up_set_three_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_three" />

                    <TextView
                        android:id="@+id/warm_up_set_three_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/warm_up_set_three_reps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warm_up_reps"/>

                </TableRow>

            </TableLayout>


        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_primary_sets"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            card_view:cardCornerRadius="8dp">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:stretchColumns="*">

                <TextView
                    android:id="@+id/text_view_primary_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray"/>

                <TableRow>
                    <TextView
                        android:id="@+id/primary_set_one_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_one" />

                    <TextView
                        android:id="@+id/primary_set_one_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/primary_set_one_reps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warm_up_reps"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/primary_set_two_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_two" />

                    <TextView
                        android:id="@+id/primary_set_two_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/primary_set_two_reps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warm_up_reps"/>

                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/primary_set_three_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_three" />

                    <TextView
                        android:id="@+id/primary_set_three_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/primary_set_three_reps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warm_up_reps"/>

                </TableRow>

            </TableLayout>
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_accessory_sets"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            card_view:cardCornerRadius="8dp">


            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:stretchColumns="*">

                <TextView
                    android:id="@+id/text_view_accessory_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Accessory Sets" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray"/>

                <TableRow>
                    <TextView
                        android:id="@+id/accessory_set_one_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_one" />

                    <TextView
                        android:id="@+id/accessory_set_one_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/accessory_set_one_reps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warm_up_reps"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/accessory_set_two_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_two" />

                    <TextView
                        android:id="@+id/accessory_set_two_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/accessory_set_two_reps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warm_up_reps"/>

                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/accessory_set_three_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_three" />

                    <TextView
                        android:id="@+id/accessory_set_three_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/accessory_set_three_reps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warm_up_reps"/>

                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/accessory_set_four_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_four" />

                    <TextView
                        android:id="@+id/accessory_set_four_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/accessory_set_four_reps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warm_up_reps"/>

                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/accessory_set_five_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_five" />

                    <TextView
                        android:id="@+id/accessory_set_five_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/accessory_set_five_reps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warm_up_reps"/>

                </TableRow>

            </TableLayout>

        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/button_complete_workout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/save_workout"/>

    </LinearLayout>

</ScrollView>
